# chatweberver

./: CMakeLists.txt
example/: CMakeLists.txt  main.cpp
include/: chatserver.hpp  chatservice.hpp  public.hpp
include/model/: FriendModel.hpp  Offlinemessagemodel.hpp  UserModel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp
include/mysql/: db.h
src/: chatserver.cpp  chatservice.cpp
src/Client/: main.cpp
src/model/: FriendModel.cpp  Offlinemessagemodel.cpp  UserModel.cpp  groupmodel.cpp
src/mysql/: db.cpp
