cmake_minimum_required(VERSION 3.0)
project(chatserver)
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread -Wall -Wextra -Werror -g")
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
include_directories(${PROJECT_SOURCE_DIR}/include)
include_directories(${PROJECT_SOURCE_DIR}/thirdparty)
aux_source_directory(${PROJECT_SOURCE_DIR}/src SRC_LIST)
include_directories(${PROJECT_SOURCE_DIR}/include/mysql)
include_directories(${PROJECT_SOURCE_DIR}/include/model)
aux_source_directory(${PROJECT_SOURCE_DIR}/src/model SRC_LIST1)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/mysql SRC_LIST2)
aux_source_directory(${PROJECT_SOURCE_DIR}/src/Client SRC_LIST3)
add_subdirectory(example)